; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/bearssl/test/extr_test_crypto.c_test_GHASH_pclmul.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/bearssl/test/extr_test_crypto.c_test_GHASH_pclmul.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [32 x i8] c"Test GHASH_pclmul: UNAVAILABLE\0A\00", align 1
@.str.1 = private unnamed_addr constant [13 x i8] c"GHASH_pclmul\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_GHASH_pclmul to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_GHASH_pclmul() #0 {
  %1 = alloca i64, align 8
  %2 = call i64 (...) @br_ghash_pclmul_get()
  store i64 %2, i64* %1, align 8
  %3 = load i64, i64* %1, align 8
  %4 = icmp eq i64 %3, 0
  br i1 %4, label %5, label %7

5:                                                ; preds = %0
  %6 = call i32 @printf(i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str, i64 0, i64 0))
  br label %10

7:                                                ; preds = %0
  %8 = load i64, i64* %1, align 8
  %9 = call i32 @test_GHASH(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.1, i64 0, i64 0), i64 %8)
  br label %10

10:                                               ; preds = %7, %5
  ret void
}

declare dso_local i64 @br_ghash_pclmul_get(...) #1

declare dso_local i32 @printf(i8*) #1

declare dso_local i32 @test_GHASH(i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
